# portia_app

./: .gitignore  .python-version  MANIFEST.in  README.md  config.json  setup.cfg  setup.py
portia/: .coverage  deploy.py  factory.py  main.py  models.py  portia.py  validate_schema.py
portia/routes/: shop.py  shop_admin.py
portia/static/: AboutView-338831b9.js  AboutView-eeff8bd4.js  index-0ffd128b.js  index-91c082c9.js
portia/templates/: placeholder.jinja2
portia/tests/: conftest.py  test_admin_goods.py  test_cart.py  test_goods.py  test_join.py  test_login.py  test_placeholder.py
portia/utils/: jwt_utils.py  placeholder.py  route_util.py  social_routes.py  validator_utils.py
portia_web/: index.html  package-lock.json  package.json  vite.config.js
portia_web/src/: App.vue  main.js
portia_web/src/components/: AdminLeftView.vue  FooterView.vue  GoodsListItem.vue  MyPageSlot.vue  PaginationItem.vue  TheWelcome.vue  TopMenuView.vue
portia_web/src/components/icons/: EmptyPicture.vue  NounAvartar.vue
portia_web/src/lib/: index.js
portia_web/src/router/: index.js
portia_web/src/stores/: users.js
portia_web/src/views/: BaseView.vue  BasketView.vue  GoodsDetailView.vue  GoodsView.vue  HomeView.vue  IndexView.vue  JoinView.vue  LoginView.vue  MyInfoView.vue  MyOrderDetail.vue  MyOrderDetailView.vue  MyOrdersView.vue  MyPageView.vue  OrdersView.vue  PaymentView.vue  TrackingView.vue
tests/: conftest.py  test_admin_goods.py  test_cart.py  test_join.py  test_login.py  test_myinfo.py  test_order.py  test_orders.py  test_placeholder.py  test_user_goods.py
(+4 files in other folders)
