[metadata]
name = portia-shop
version = 0.1

[options]
packages = find:
include_package_data = True
install_requires =
    Flask
    SQLAlchemy
    flask-sqlalchemy
    cerberus
    flask-login
    social-auth-app-flask
    social-auth-app-flask-sqlalchemy
    psycopg[binary]
    pyyaml
    nodeenv

[options.extras_require]
testing =
    pytest
    coverage
    pytest-cov

[options.entry_points]
console_scripts =
    nodejs_setup = portia.deploy:nodejs_setup
    front_ready = portia.deploy:frontend_ready
