[metadata]
name = portia-shop
version = 0.1

[options]
packages = find:
include_package_data = True
install_requires =
    Flask
    SQLAlchemy
    flask-sqlalchemy
    cerberus
    psycopg[binary]
    pyyaml
    nodeenv
    bcrypt
    flask-jwt-extended

[options.extras_require]
testing =
    pytest
    coverage
    pytest-cov

[options.entry_points]
console_scripts =
    nodejs_setup = portia.deploy:nodejs_setup
    front_ready = portia.deploy:frontend_ready
